--- a/Quesstionaire/Backend/src/main/resources/application.properties
+++ b/Quesstionaire/Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Backend
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://database-1.c3ic48mi222s.eu-north-1.rds.amazonaws.com:5432/questiondb
+spring.datasource.url=jdbc:postgresql://database-2.c3ic48mi222s.eu-north-1.rds.amazonaws.com:5432/rdsadmin2
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=update
